Revert "Fix remove horizontal scroll bar (#716)"
This reverts commit 98d421abc5e8445f98564a29325e8c8a8bee8b4a.

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -23,7 +23,6 @@
 
 .full-width {
   width: 100vw;
-  width: 100cqw;
   transform: translateX(-50%);
   margin-left: 50%;
 }
