--- a/_sass/pages/_conference.scss
+++ b/_sass/pages/_conference.scss
@@ -8,7 +8,6 @@
     background-color: white;
     z-index: 100;
     width: 100vw;
-    width: 100cqw;
     padding-left: 15vw;
     margin-left: -15vw;
     margin-bottom: 30px;
