--- a/_sass/utilities/_full-width-rule.scss
+++ b/_sass/utilities/_full-width-rule.scss
@@ -9,7 +9,6 @@
     content: "";
     display: block;
     width: 100vw;
-    width: 100cqw;
     position: absolute;
     border-block-end: 0.16ch solid var(--border-color);
   }
